deployment_files/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: bhagwati-ns
  labels:
    name: bhagwati-ns
