deployment_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bhagwati-deployment
  namespace: bhagwati-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bhagwati-be
  template:
    metadata:
      labels:
        app: bhagwati-be
    spec:
      containers:
      - name: bhagwati-container
        image: bhagwati-be:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /config/application.properties
      volumes:
      - name: config-volume
        configMap:
          name: bhagwati-config
