deployment_files/deployment_new_fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bhagwati-fe-deployment
  namespace: bhagwati-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bhagwati-fe
  template:
    metadata:
      labels:
        app: bhagwati-fe
    spec:
      containers:
      - name: bhagwati-fe-container
        image: goelvaibhav57/bhagwati-fe:bhagwati-fe_1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
