deployment_files/service_fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: bhagwati-fe-svc
  namespace: bhagwati-ns
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: bhagwati-fe
