deployment_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bhagwati-ingress
  namespace: bhagwati-ns	
spec:
  rules:
   - host: vgnagp1.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bhagwati-svc
            port:	
              number: 8080
  ingressClassName: nginx
