deployment_files/ingress_fe_gke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bhagwati-fe-ingress
  namespace: bhagwati-ns	
spec:
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bhagwati-fe-svc
            port:	
              number: 8081
  ingressClassName: nginx
